<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.lorol.betamax" >

    <PreferenceCategory
        android:key="credentials"
        android:title="@string/credentials" >
        <EditTextPreference
            android:key="username"
            android:title="@string/username" />
        <EditTextPreference
            android:key="password"
            android:password="true"
            android:title="@string/password" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="scron"
            android:summary="@string/scron_info"
            android:title="@string/scron_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showon"
            android:summary="@string/showon_info"
            android:title="@string/showon_title" />
        <ListPreference
            android:entries="@array/providers"
            android:entryValues="@array/providers"
            android:key="provider"
            android:title="@string/provider" />
    </PreferenceCategory>

</PreferenceScreen>